<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_start_connection"
        android:title="@string/start_connection"
        android:visible="true" />
    <item
        android:id="@+id/menu_stop_connection"
        android:title="@string/stop_connection"
        android:visible="true" />
    <item
        android:id="@+id/menu_unpair_all"
        android:title="@string/unpair_all"
        android:visible="true" />
    <item
        android:id="@+id/menu_init_session"
        android:orderInCategory="100"
        android:title="@string/init_session" />
    <item
        android:id="@+id/menu_reset_session"
        android:orderInCategory="100"
        android:title="@string/reset_session" />
    <item
        android:id="@+id/menu_get_deivce_info"
        android:orderInCategory="100"
        android:title="@string/get_info" />
    <item
        android:id="@+id/menu_cancel_check_card"
        android:orderInCategory="100"
        android:title="@string/cancel_check_card" />
    <item
        android:id="@+id/menu_read_barcode"
        android:orderInCategory="100"
        android:title="@string/read_barcode" />
    <item
        android:id="@+id/menu_auto_config"
        android:orderInCategory="100"
        android:title="@string/auto_config" />
    <item
        android:id="@+id/menu_enable_input_amount"
        android:orderInCategory="100"
        android:title="@string/enable_input_amount" />
    <item
        android:id="@+id/menu_encrypt_pin"
        android:orderInCategory="100"
        android:title="@string/encrypt_pin" />
    <item
        android:id="@+id/menu_encrypt_data"
        android:orderInCategory="100"
        android:title="@string/encrypt_data" />
    <item
        android:id="@+id/menu_send_apdu"
        android:orderInCategory="100"
        android:title="@string/send_apdu" />
    <item
        android:id="@+id/menu_print_sample"
        android:orderInCategory="100"
        android:title="@string/print_sample" />
    <item
        android:id="@+id/menu_main"
        android:orderInCategory="100"
        android:title="@string/main" />
    <item
        android:id="@+id/menu_apdu"
        android:orderInCategory="100"
        android:title="@string/apdu" />
    <item
        android:id="@+id/capk_activity"
        android:orderInCategory="100"
        android:title="@string/menu_capk" />
    <item
        android:id="@+id/menu_gprs_wifi"
        android:orderInCategory="100"
        android:title="@string/gprs_wifi" />
    <item
        android:id="@+id/menu_nfc"
        android:orderInCategory="100"
        android:title="@string/nfc" />
    <item
        android:id="@+id/menu_inject_session_key"
        android:orderInCategory="100"
        android:title="@string/inject_session_key"
        android:visible="true" />
</menu>
